style(ContactDetails): fix float contaxt collapsing issue (#1421)
* style(ContactDetails): fix float contaxt collapsing issue

* style(ContactDetails): fix alignment and overflow

--- a/packages/ringcentral-widgets/components/ContactDetails/styles.scss
+++ b/packages/ringcentral-widgets/components/ContactDetails/styles.scss
@@ -25,12 +25,14 @@
 }
 
 .contacts {
+  line-height: 23px;
   overflow: hidden;
   border-bottom: 1px solid #e9e9e9;
   margin: 0;
   padding: 20px 0;
   list-style: none;
   .item {
+    overflow: hidden;
     min-width: 250px;
     &:not(:first-child) {
       margin-top: 20px;
@@ -43,9 +45,9 @@
     list-style: none;
     width: 80%;
   }
-  li:not(:first-child) {
-    margin-top: 20px;
-  }
+  // li:not(:first-child) {
+  //   margin-top: 20px;
+  // }
   .label,
   .number,
   .menu {
@@ -66,7 +68,6 @@
   .menu {
     float: right;
     text-align: right;
-    margin-top: -5px;
     margin-right: 5px;
     button {
       border: none;
